# macro-pipeline

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DMS_SOURCE_MEMO.md  L5B_RETROSPECTIVE.md  LAYER1_AUDIT.md  LAYER_3_5_3.5A_PREFLIGHT.md  LAYER_3_5_3.5A_VERIFICATION.md  LAYER_3_5_3.5B_PREFLIGHT.md  LAYER_3_5_3.5B_VERIFICATION.md  LAYER_3_5_3.5C_PREFLIGHT.md  LAYER_3_5_3.5C_VERIFICATION.md  LAYER_3_5_3.5D_PREFLIGHT.md  LAYER_3_5_3.5D_VERIFICATION.md  LAYER_3_5_3.5E_PREFLIGHT.md  LAYER_3_5_3.5E_VERIFICATION.md  LAYER_3_5_DEVIATIONS.md  LAYER_3_5b_RETROSPECTIVE.md  LAYER_3_5b_T_PREFLIGHT.md  LAYER_3_5b_T_VERIFICATION.md  LAYER_3_5b_U_PREFLIGHT.md  LAYER_3_5b_U_VERIFICATION.md  LAYER_3_5b_V_PREFLIGHT.md  LAYER_3_5b_V_VERIFICATION.md  LAYER_3_5b_W_PREFLIGHT.md  LAYER_3_5b_W_VERIFICATION.md  LAYER_5_AUTHORING_SUMMARY.md  LAYER_5_BUILD_SPEC.md  LAYER_5_CHUNK_1_PREFLIGHT.md  LAYER_5_CHUNK_1_VERIFICATION.md  LAYER_5_CHUNK_2_PREFLIGHT.md  LAYER_5_CHUNK_2_VERIFICATION.md  LAYER_5_CHUNK_3_PREFLIGHT.md  LAYER_5_CHUNK_3_VERIFICATION.md  LAYER_5_CHUNK_4_PREFLIGHT.md  LAYER_5_CHUNK_4_VERIFICATION.md  LAYER_5_CHUNK_5_PREFLIGHT.md  LAYER_5_CHUNK_5_VERIFICATION.md  (+23 more)
.github/workflows/: test.yml
config/: alert_rules.yaml
data/: nber_announcement_calendar.csv
docs/: ap_register.md
docs/build-plans/: 00_VISION_AND_PHILOSOPHY_v2.md  01_CLAUDE_CODE_PIPELINE_GUIDE_v2.md  02_CHATGPT_METHODOLOGY_REVIEW_v2.md  03_CODEX_CODE_REVIEW_v2.md  04_STRATEGIC_PM_INSTRUCTIONS_v2.md  L11_PRODUCER_INTEGRATION_AUDIT.md  L1_7_BACKLOG.md  L1_7_RETROSPECTIVE.md  L1_TO_L8_CUMULATIVE_RETROSPECTIVE.md  L3_COMPONENT_PANEL_D2_DESIGN.md  L5B_BACKLOG.md  L5_BUILD_PLAN_v1.md  L5_BUILD_SXX_LOG.md  L5_B_TASK_A_PREFLIGHT.md  L5_RM_4_PREFLIGHT.md  L5_RM_6_PREFLIGHT.md  L6_J_PRE_WORKTREE_AUDIT.md  L6_J_TEST_COUNT_AUDIT.md  L6_RETROSPECTIVE.md  L7_ARCHITECTURE_SKETCH.md  R7_REVIEWER_INVOCATION_PROMPTS.md
macro_pipeline/: access.py  cache.py  config.py  exceptions.py  preprocessing.py  standalone_launcher.py  unit_conversion.py  validation.py
macro_pipeline/alerting/: __init__.py  adapters.py  alert_dispatcher.py  rule_loader.py
macro_pipeline/analysis/: README.md  __init__.py  brier_reliability.py  component_panel.py  drawdown_conditionals.py  effective_sample_size.py  fdr_gating.py  forecast_sigma.py  newey_west_hac.py  r_squared_panel.py  regime_conditional_validation.py  regression_target.py  walk_forward_cv.py
macro_pipeline/cli/: __init__.py  scheduler_cli.py
macro_pipeline/data_snapshot/: MANIFEST.json  __init__.py  fed_EBP.meta.json  fed_EBP.parquet  fed_NTFS_DAILY_DASHBOARD.meta.json  fed_NTFS_DAILY_DASHBOARD.parquet  fed_NTFS_OFFICIAL_REPL.meta.json  fed_NTFS_OFFICIAL_REPL.parquet  fred_ANFCI.meta.json  fred_ANFCI.parquet  fred_CORESTICKM159SFRBATL.meta.json  fred_CORESTICKM159SFRBATL.parquet  fred_INDPRO.meta.json  fred_INDPRO.parquet  fred_KCFSI.meta.json  fred_KCFSI.parquet  fred_MEDCPIM158SFRBCLE.meta.json  fred_MEDCPIM158SFRBCLE.parquet  fred_NFCI.meta.json  fred_NFCI.parquet  fred_PAYEMS.meta.json  fred_PAYEMS.parquet  fred_PCEPILFE.meta.json  fred_PCEPILFE.parquet  fred_SAHMREALTIME.meta.json  fred_SAHMREALTIME.parquet  fred_T10Y2Y.meta.json  fred_T10Y2Y.parquet  fred_T10Y3M.meta.json  fred_T10Y3M.parquet  fred_USREC.meta.json  fred_USREC.parquet  official_SHILLER_CAPE.meta.json  official_SHILLER_CAPE.parquet  official_SHILLER_CPI.meta.json  official_SHILLER_CPI.parquet  official_SHILLER_DIVIDEND.meta.json  official_SHILLER_DIVIDEND.parquet  official_SHILLER_EARNINGS.meta.json  official_SHILLER_EARNINGS.parquet  (+18 more)
macro_pipeline/ensemble/: __init__.py  aggregator.py  bayesian_confidence.py  dms_and_lucas.py  metadata.py  model_signals.py  ood_and_caps.py  rcf.py  registry.py  triple_decomposition.py  triple_sigma.py
macro_pipeline/factors/: __init__.py  (+1 more)
pyinstaller/: macro_forecast.spec
scripts/: README.md  build_data_snapshot.py  build_standalone.py  check_python_version.py  generate_excel_templates.py  l6g_update_registry.py  train_hmm_v1.py
src/: access.py  cache.py  config.py  preprocessing.py  unit_conversion.py  validation.py
tests/: conftest.py  test_aggregator.py  test_ap6_narrowing.py  test_atomic_cache.py  test_bayesian_confidence.py  test_bayesian_shrinkage.py  test_brier_reliability.py  test_cache_atomicity.py  test_cache_validation.py  test_cache_validation_strict.py  test_cdrs.py  test_cdrs_trigger.py  test_cdrs_vulnerability.py  test_cftc_tff_spx.py  test_component_panel.py  test_composite_refit.py  test_confidence.py  test_conviction.py  test_crps.py  test_crps_weights.py  test_dms_adjustment.py  test_dms_and_lucas.py  test_drawdown_conditionals.py  test_ebp.py  test_ensemble_metadata.py  test_exceptions.py  test_fdr_gating.py  test_forecast_sigma.py  test_fred_loader.py  test_gate3.py  test_isotonic_calibrator.py  test_l10_data_ingestion.py  test_l10_integration.py  test_l10_standalone.py  test_l10_webapp_routes.py  test_l11_1_launcher_version_check.py  test_l11_2_launcher_resilience.py  test_l11_3_run_bat_e2e.py  test_l11_data_snapshot.py  test_l11_form_responsiveness.py  (+77 more)
(+194 files in other folders)
