[project]
name = "macro-pipeline"
version = "0.1.0"
description = "US Macro x Recession x Drawdown pipeline (CRPS + CDRS + R-squared regression)"
requires-python = ">=3.12,<3.14"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "xlrd>=2.0.1",
    "pyarrow>=14",
    "fredapi>=0.5.2",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "pdfplumber>=0.10",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "tenacity>=8.2",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
