[project]
name = "macro-pipeline"
version = "0.1.0"
description = "US Macro x Recession x Drawdown pipeline (CRPS + CDRS + R-squared regression)"
requires-python = ">=3.12,<3.14"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "openpyxl>=3.1",
    "xlrd>=2.0.1",
    "pyarrow>=14",
    "fredapi>=0.5.2",
    "yfinance>=0.2.40",
    "requests>=2.31",
    "pdfplumber>=0.10",
    "scipy>=1.12",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "hmmlearn>=0.3.0",
    "filelock>=3.13",
    "tenacity>=8.2",
    "typer>=0.12",
    "rich>=13.7",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["macro_pipeline"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
# E501  formatter handles the line length, no need to fail-on-it.
# RUF002/RUF003  intentional em-dashes / quotes in prose; not a bug.
# RUF046 cosmetic (already suggests int(...)); minor.
# RUF059 unused unpacked variable; tolerated where the variable name is
#         documentation (e.g. ``_, meta = load_yahoo_series(...)``).
ignore = ["E501", "RUF002", "RUF003", "RUF046", "RUF059"]

[tool.ruff.lint.per-file-ignores]
# Loaders that import lazily inside functions to dodge circular imports
# (src.exceptions / src.cache <-> src.preprocessing / loader). The late
# imports are intentional, not a style mistake.
"macro_pipeline/loaders/*.py" = ["E402"]
"macro_pipeline/access.py" = ["E402"]
"macro_pipeline/preprocessing.py" = ["E402"]
# signal_probability uses TP / FP / FN / TN / LR / P / N; conviction uses
# weights tuple unpacking — both are math notation, not style bugs.
"macro_pipeline/models/signal_probability.py" = ["N806", "N802", "N803", "N815"]
"macro_pipeline/models/conviction.py" = ["N806"]
# Layer 3D analysis: forward-return helpers use Hansen-Hodrick math
# notation (p_tH = price at t+H); regression dataclass uses LR-style
# upper-case for HAC. Math notation, not style bugs.
"macro_pipeline/analysis/regression_target.py" = ["N806"]
"macro_pipeline/analysis/newey_west_hac.py" = ["N802", "N806", "N815"]
# Tests routinely do top-of-test imports after pytest fixtures and
# conditional imports; allow E402 there as well. test_signal_probability
# uses S2/S4 in test names to mirror the PriorStrength enum aliases.
"tests/*.py" = ["E402"]
"tests/test_signal_probability.py" = ["E402", "N802", "N806"]
# L3.5A frozen-contract tests embed exception class names in test
# function names for grep-ability (e.g.,
# ``test_hmm_missing_artifact_raises_HmmArtifactMissingError``).
# Math-notation-style: not a real lint violation.
"tests/test_regime_hmm_frozen.py" = ["E402", "N802"]
# L3.5B PIT enforcement tests: same naming pattern (test names embed
# exception class names + sub-phase tag).
"tests/test_pit_enforcement.py" = ["E402", "N802"]
# L3.5D dissent + rename tests: test names embed RegimeState constants,
# sub-phase tags (3_5B / 3_5D), and class-style identifiers.
"tests/test_regime_dissent.py" = ["E402", "N802"]
"tests/test_scored_observation_rename.py" = ["E402", "N802"]
# L3.5D RegimeState(str, Enum) is the spec-literal form (§6.3-1). Python
# 3.11+ offers StrEnum but spec compatibility takes precedence.
"macro_pipeline/regime/regime_context.py" = ["UP042"]
# pit_audit dataclass field name mirrors the module-level constant
# ``VINTAGE_REQUIRED_SERIES`` for clarity (uppercase preserves the link).
"macro_pipeline/utils/pit_audit.py" = ["N815"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
